--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ development:
   <<: *default
   database: flamingmoe_development
   username: postgres
-  password: d3vteam
+  password: 
   host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
@@ -48,7 +48,7 @@ test:
   <<: *default
   database: flamingmoe_test
   username: postgres
-  password: d3vteam
+  password: 
   host: localhost
 
 # As with config/secrets.yml, you never want to store sensitive information,
